<resources>
    <string name="app_name">Health Partner</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_age">Age</string>
    <string name="hint_systol">systol Bp.</string>
    <string name="hint_diastol">Diastol Bp.</string>
    <string name="hint_aftermeal">After Meal.</string>
    <string name="hint_beforemeal">Before Meal.</string>
    <string-array name="gender">
        <item>male</item>
        <item>female</item>
    </string-array>
    <string-array name="session">
        <item>BreakFast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exercise">Exercise</string>
    <string name="menu_tips">Health Tips</string>
    <string name="menu_report">Reports</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>


    <string name="sedentary">sedentary (little or no exercise)</string>
    <string name="lightly">lightly active (light exercise or sports 1–3 days/week)</string>
    <string name="moderately">moderately active (moderate exercise 3–5 days/week)</string>
    <string name="veryactive">very active (hard exercise 6–7 days/week)</string>
    <string name="superactive">super active (very hard exercise and a physical job)</string>

    <string name="bpreport">Blood Pressure Report</string>
    <string name="bsugarreport">Blood Sugar Report</string>
    <string name="caloriereport">Food calorie Report</string>
    <string name="addfood">Add Food</string>
    <string name="udetails">User Details</string>
    <string name="blood_sugar_report">Blood Sugar Report</string>
    <string name="blood_pressure_report">Blood Pressure Report</string>
    <string name="step_report">Step report</string>
    <string name="bpErrdigit4">Blood Pressure values should less than 4 digits</string>
    <string name="dbErrdigit4">Diabetes values should less than 4 digits</string>
    <string name="HeiWeierrdigit4"><![CDATA[height & weight should less than 4 digits]]></string>
    <string name="bpExcdigit4">Enter valid numbers</string>
    <string name="cancelbtn">Cancel</string>
    <string name="updatebtn">Update</string>

    <string name="food_name_loading">Food Name loading...</string>
    <string name="_100">100</string>
    <string name="calorie">Calorie</string>
    <string name="_0">0</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fiber">Fiber</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="food_name">Food Name</string>
    <string name="normal_bp">Normal BP</string>
    <string name="low_bp">Low BP</string>
    <string name="high_bp">High BP</string>
    <string name="normal_db">Normal Diabetes</string>
    <string name="low_db">Low Diabetes</string>
    <string name="high_db">High Diabetes</string>
    <string name="bphint">Normal Systol 110-130, Diastol 75-85</string>
    <string name="dbhint">Normal bef. meals 70-130, aft. meals 100-180</string>
    <string name="error_please_goback_and_take_a_photo">Error !! Please goback and take a photo</string>
    <string name="or">(OR)</string>
    <string-array name="exerarray">
        <item>@string/sedentary</item>
        <item>@string/lightly</item>
        <item>@string/moderately</item>
        <item>@string/veryactive</item>
        <item>@string/superactive</item>
    </string-array>
</resources>
