<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="75dp"
        >

        <EditText
            android:id="@+id/nusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="30dp" />

        <EditText
            android:id="@+id/nemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/change_email"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="75dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/nheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/nweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="5"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal" />

    </LinearLayout>

        <EditText
            android:id="@+id/nage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:hint="@string/hint_age"
            android:inputType="number" />

        <Spinner
            android:id="@+id/ngender"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/gender" />

        <Spinner
            android:id="@+id/nexer"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:entries="@array/exerarray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="75dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_google_play_services_update_button" />
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>